z-index issue fixed

--- a/sass/admin/css/free/_booking-details.scss
+++ b/sass/admin/css/free/_booking-details.scss
@@ -99,7 +99,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 9;
+        z-index: 99999;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -363,6 +363,7 @@
             
                                 }
                             }
+
                             .fc-daygrid-day-bottom{
                                 a.fc-more-link{
                                     border-radius: 16px;
